Fix minimal height of the page to avoid having the header sub menu cut off in pages with no or minimal content

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,10 @@ body, td, th, input, select, option, optgroup, button, .text_input {
 a, a:hover {
      color: #0366d6;
 }
+
 #wrapper {
     height: auto;
+    min-height: 500px;
 }
 
 #header {
